--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,20 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
+
+	<TextView
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:id="@+id/scoreLabel"
+		tools:text="Score: 100230"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		android:textColor="#ffffff"
+		android:background="#80272727"
+		android:textSize="16sp"
+		/>
+
 	<FrameLayout
 		android:id="@+id/readyFrame"
 		android:layout_width="wrap_content"
