--- a/app/src/main/res/layout/layout_ready.xml
+++ b/app/src/main/res/layout/layout_ready.xml
@@ -4,7 +4,10 @@
 	android:orientation="vertical"
 	android:layout_gravity="center"
 	android:layout_width="300dp"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:background="#80272727"
+	android:padding="24dp"
+	>
 
 	<TextView
 		android:layout_width="match_parent"
